gitops/dynamic-dns/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamic-dns
  namespace: dynamic-dns
spec:
  selector:
    app: dynamic-dns
  ports:
    - name: http
      port: 80
      targetPort: 8000
